--- a/docs/style.css
+++ b/docs/style.css
@@ -36,12 +36,12 @@
   background-color: #f5f5f5;
   height: 100%;
 }
-.mg-title, .pr-title {
+.mg-title, .pr-title, .ts-title {
   margin-left: 8%;
   margin-top: 5%;
 }
 @media screen and (max-width: 800px) {
-  .mg-title, .pr-title {
+  .mg-title, .pr-title, .ts-title {
     width: 200px;
     margin-left: 50px;
   }
@@ -91,7 +91,7 @@ p {
 /* Projects section */
 .projects{
   background-color: #f5f5f5;
-  height: 100%;
+  height: 130%;
 }
 .civitas{
   line-height: 30px;
@@ -103,8 +103,16 @@ p {
 .gh-card{
   width: 20px;
 }
+/*Tech skills*/
+.skills {
+  background-color: #f5f5f5;
+  height: 100%;
+}
+.icon-grid{
+  margin-top: 7%;
+  font-size: 60px;
 
-
+}
 
 
 
