--- a/docs/style.css
+++ b/docs/style.css
@@ -36,12 +36,12 @@
   background-color: #f5f5f5;
   height: 100%;
 }
-.mg-title, .pr-title, .ts-title {
+.mg-title, .pr-title, .ts-title, .cj-title {
   margin-left: 8%;
   margin-top: 5%;
 }
 @media screen and (max-width: 800px) {
-  .mg-title, .pr-title, .ts-title {
+  .mg-title, .pr-title, .ts-title .cj-title {
     width: 200px;
     margin-left: 50px;
   }
@@ -89,7 +89,7 @@ p {
   }
 }
 /* Projects section */
-.projects{
+.projects, .contact{
   background-color: #f5f5f5;
   height: 130%;
 }
@@ -109,8 +109,17 @@ p {
   height: 100%;
 }
 .icon-grid{
-  margin-top: 7%;
-  font-size: 60px;
+  margin-top: 5%;
+  font-size: 70px;
+}
+/*contact*/
+.contact{
+  background-color: #f5f5f5;
+  height: 90%;
+}
+.contact-info{
+  font-size: 30px;
+  margin-top: 80px;
 }
 
 
