--- a/docs/style.css
+++ b/docs/style.css
@@ -89,9 +89,9 @@ p {
   }
 }
 /* Projects section */
-.projects, .contact{
+.projects{
   background-color: #f5f5f5;
-  height: 130%;
+  height: 180%;
 }
 .civitas{
   line-height: 30px;
@@ -121,7 +121,15 @@ p {
   font-size: 30px;
   margin-top: 80px;
 }
+.pic-project{
+  width: 180px;
+  height: 250px;
+}
 
+.contact{
+  background-color: #f5f5f5;
+  height: 90%;
+}
 
 
 /*White border*/
