--- a/docs/style.css
+++ b/docs/style.css
@@ -52,8 +52,9 @@
 
 .bold-p {
   font-family: Quicksand;
-  font-weight: 600;
+  font-weight: 550;
   margin-top: 10%;
+  font-size: 20px;
 }
 p {
   font-family: Quicksand;
@@ -62,7 +63,6 @@ p {
   padding-top: 3%;
   /*  margin-bottom: 20%; */
 }
-
 @media screen and (min-width: 800px) {
   .bren-pic {
     padding-top: 8%;
@@ -70,7 +70,6 @@ p {
     margin-bottom: 10%;
   }
 }
-
 .about-me-pic {
   padding-left: 30%;
 }
@@ -130,8 +129,6 @@ p {
   background-color: #f5f5f5;
   height: 90%;
 }
-
-
 /*White border*/
 #bottom,
 #left,
